refactor: Improve package management:
- Add Makefile, environement yaml files, .editirconfig.

- Replace setup.py and requirements.txt with pyproject.toml

- Add dependabot.yml and the GiHub workflow

- Add linting settings, py.typed, and .pre-commit-config.yaml

- Update .gitignore

- Update years in LICENSE

- Add the conda recipe

--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,165 @@ dmypy.json
 cython_debug/
 
 #PyCharm
-.idea/ 
+.idea/
+
+
+# Generic
+__pycache__
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+../../../mentor/kupriienko/airtable-notify/.env
+.anvil/*
+.elasticbeanstalk/*
+.env-mysql
+.history
+.mr.developer.cfg
+.pdm.toml
+.prof
+.project
+.pydevproject
+.tox
+.vagrant/
+*.code-workspace
+*.gz
+*.iml
+*.iws
+*.lock
+*.pyc
+*.rar
+*.sqlite
+*.zip
+**/__pycache__/*.pyc
+**/.idea/dataSources.ids
+**/.idea/dataSources.local.xml
+**/.idea/dataSources.xml
+**/.idea/dictionaries
+**/.idea/dynamic.xml
+**/.idea/jsLibraryMappings.xml
+**/.idea/sqlDataSources.xml
+**/.idea/tasks.xml
+**/.idea/uiDesigner.xml
+**/.idea/vcs.xml
+**/.idea/workspace.xml
+**/staticfiles/
+*/__pycache__/
+*/__pycache__/*.pyc
+*/*/__pycache__/
+*/*/*/__pycache__/
+*/staticfiles/
+/bin
+/include
+/lib
+/out/
+/src
+
+atlassian-ide-plugin.xml
+bin
+build
+cmake-build-*/
+com_crashlytics_export_strings.xml
+crashlytics-build.properties
+crashlytics.properties
+develop-eggs
+dist
+eggs
+fabric.properties
+lib
+lib64
+media
+myvenv
+node_modules
+node_modules/
+parts
+pip-wheel-metadata/
+poetry.toml
+projects/static/
+pyrightconfig.json
+pythonenv*
+sdist
+secret_key.txt
+static/build/
+static/local/
+static/media
+static/rev-manifest.json
+staticfiles/
+tdd
+temp/
+Thumbs.db
+tmp/
+uploads/
+var
+venv
+
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+.projectile
+.overcommit.yml
+
+junit*
+
+# Coverage Files
+htmlcov
+.coverage*
+
+# IDEs
+.idea_modules/
+.idea/*
+.idea/*.iml
+.idea/**/contentModel.xml
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/dataSources/
+.idea/**/dbnavigator.xml
+.idea/**/dictionaries
+.idea/**/dynamic.xml
+.idea/**/gradle.xml
+.idea/**/libraries
+.idea/**/mongoSettings.xml
+.idea/**/shelf
+.idea/**/sqlDataSources.xml
+.idea/**/tasks.xml
+.idea/**/uiDesigner.xml
+.idea/**/usage.statistics.xml
+.idea/**/workspace.xml
+.idea/caches/build_file_checksums.ser
+.idea/dataSources.ids
+.idea/dataSources.local.xml
+.idea/dataSources.xml
+.idea/dictionaries
+.idea/dynamic.xml
+.idea/gradle.xml
+.idea/httpRequests
+.idea/jsLibraryMappings.xml
+.idea/libraries
+.idea/modules
+.idea/modules.xml
+.idea/mongoSettings.xml
+.idea/replstate.xml
+.idea/sqlDataSources.xml
+.idea/tasks.xml
+.idea/uiDesigner.xml
+.idea/vcs.xml
+.idea/workspace.xml
+# VS Code
+.vscode/
+# pycharm
+queue.json
+dev/
+
+# Operating Systems
+.DS_Store
+
+# ruff cache
+.ruff_cache/
+
+
+# pytest cache
+pytestdebug.log
