ci: Fix dependabot.yml extension, disable pre-commit on CI

--- a/.github/workflows/commit_checks.yaml
+++ b/.github/workflows/commit_checks.yaml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-      - uses: pre-commit/action@v3.0.1
+      # TODO: Enable pre-commit after setting up configurations
+      #- uses: pre-commit/action@v3.0.1
 
   test:
     name: test py${{ matrix.python-version }} on ${{ matrix.os }}
