--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,110 +54,110 @@ repos:
       # Detects the presence of private keys
       - id: detect-private-key
 
-  - repo: https://github.com/jorisroovers/gitlint
-    rev: v0.19.1
-    hooks:
-      - id: gitlint
-
-  - repo: https://github.com/codespell-project/codespell
-    rev: v2.3.0
-    hooks:
-      - id: codespell
-        args: [--write]
-
-  - repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: 0.30.0
-    hooks:
-      - id: check-github-workflows
-
-  - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v2.0.4
-    hooks:
-      - id: autopep8
-        exclude: ^docs/
-
-  - repo: https://github.com/akaihola/darker
-    rev: v2.1.1
-    hooks:
-      - id: darker
-
-  - repo: https://github.com/PyCQA/autoflake
-    rev: v2.3.1
-    hooks:
-      - id: autoflake
-        args:
-          - --in-place
-          - --remove-all-unused-imports
-          - --remove-unused-variable
-          - --ignore-init-module-imports
-
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.1.1
-    hooks:
-    -   id: flake8
-        additional_dependencies:
-          - radon
-          - flake8-docstrings
-          - Flake8-pyproject
-        exclude: ^docs/
-
-
-  - repo: https://github.com/PyCQA/pylint
-    rev: v3.3.2
-    hooks:
-      - id: pylint
-        args:
-          - --exit-zero
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.19.0
-    hooks:
-      - id: pyupgrade
-        args: [--py38-plus, --keep-runtime-typing]
-
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.8.3
-    hooks:
-      # Run the linter.
-      - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
-      # Run the formatter.
-      - id: ruff-format
-
-  -   repo: https://github.com/dosisod/refurb
-      rev: v2.0.0
-      hooks:
-      -   id: refurb
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.13.0
-    hooks:
-    -   id: mypy
-        args:
-          [
-            --config-file=./pyproject.toml,
-          ]
-        exclude: ^samples/
-
-  - repo: https://github.com/RobertCraigie/pyright-python
-    rev: v1.1.390
-    hooks:
-    - id: pyright
-
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.8.0
-    hooks:
-      - id: bandit
-        args: ["-c", "pyproject.toml", "-r", "."]
-        # ignore all tests, not just tests data
-        exclude: ^tests/
-        additional_dependencies: [".[toml]"]
-
-  - repo: https://github.com/crate-ci/typos
-    rev: v1.28.3
-    hooks:
-      - id: typos
+#  - repo: https://github.com/jorisroovers/gitlint
+#    rev: v0.19.1
+#    hooks:
+#      - id: gitlint
+#
+#  - repo: https://github.com/codespell-project/codespell
+#    rev: v2.3.0
+#    hooks:
+#      - id: codespell
+#        args: [--write]
+#
+#  - repo: https://github.com/python-jsonschema/check-jsonschema
+#    rev: 0.30.0
+#    hooks:
+#      - id: check-github-workflows
+#
+#  - repo: https://github.com/pre-commit/mirrors-autopep8
+#    rev: v2.0.4
+#    hooks:
+#      - id: autopep8
+#        exclude: ^docs/
+#
+#  - repo: https://github.com/akaihola/darker
+#    rev: v2.1.1
+#    hooks:
+#      - id: darker
+#
+#  - repo: https://github.com/PyCQA/autoflake
+#    rev: v2.3.1
+#    hooks:
+#      - id: autoflake
+#        args:
+#          - --in-place
+#          - --remove-all-unused-imports
+#          - --remove-unused-variable
+#          - --ignore-init-module-imports
+#
+#  - repo: https://github.com/pycqa/flake8
+#    rev: 7.1.1
+#    hooks:
+#    -   id: flake8
+#        additional_dependencies:
+#          - radon
+#          - flake8-docstrings
+#          - Flake8-pyproject
+#        exclude: ^docs/
+#
+#
+#  - repo: https://github.com/PyCQA/pylint
+#    rev: v3.3.2
+#    hooks:
+#      - id: pylint
+#        args:
+#          - --exit-zero
+#
+#  - repo: https://github.com/asottile/pyupgrade
+#    rev: v3.19.0
+#    hooks:
+#      - id: pyupgrade
+#        args: [--py38-plus, --keep-runtime-typing]
+#
+#  - repo: https://github.com/charliermarsh/ruff-pre-commit
+#    # Ruff version.
+#    rev: v0.8.3
+#    hooks:
+#      # Run the linter.
+#      - id: ruff
+#        args: [--fix, --exit-non-zero-on-fix]
+#      # Run the formatter.
+#      - id: ruff-format
+#
+#  -   repo: https://github.com/dosisod/refurb
+#      rev: v2.0.0
+#      hooks:
+#      -   id: refurb
+#
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v1.13.0
+#    hooks:
+#    -   id: mypy
+#        args:
+#          [
+#            --config-file=./pyproject.toml,
+#          ]
+#        exclude: ^samples/
+#
+#  - repo: https://github.com/RobertCraigie/pyright-python
+#    rev: v1.1.390
+#    hooks:
+#    - id: pyright
+#
+#  - repo: https://github.com/PyCQA/bandit
+#    rev: 1.8.0
+#    hooks:
+#      - id: bandit
+#        args: ["-c", "pyproject.toml", "-r", "."]
+#        # ignore all tests, not just tests data
+#        exclude: ^tests/
+#        additional_dependencies: [".[toml]"]
+#
+#  - repo: https://github.com/crate-ci/typos
+#    rev: v1.28.3
+#    hooks:
+#      - id: typos
 
 #  - repo: https://github.com/google/yapf
 #    rev: v0.40.2
