--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,6 +64,7 @@ repos:
     hooks:
       - id: codespell
         args: [--write]
+        exclude: ^tests.py
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.30.0
