--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-# TODO: Move tests to the tests filder
+# TODO: Move tests to the 'tests' folder
 include = ["mailgun", "mailgun.handlers", "mailgun.*", "tests.py"]
 
 [tool.setuptools.package-data]
