--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -172,14 +172,14 @@ repos:
 #      hooks:
 #      -   id: pytype
 
-#  - repo: https://github.com/executablebooks/mdformat
-#    rev: 0.7.17
-#    hooks:
-#      - id: mdformat
-#        additional_dependencies:
-#          # gfm = GitHub Flavored Markdown
-#          - mdformat-gfm
-#          - mdformat-black
+  - repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.17
+    hooks:
+      - id: mdformat
+        additional_dependencies:
+          # gfm = GitHub Flavored Markdown
+          - mdformat-gfm
+          - mdformat-black
 
 #    - repo: https://github.com/adrienverge/yamllint.git
 #      rev: v1.35.1
