--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -70,7 +70,7 @@ repos:
     rev: 0.30.0
     hooks:
       - id: check-github-workflows
-#
+
   - repo: https://github.com/pre-commit/mirrors-autopep8
     rev: v2.0.4
     hooks:
@@ -115,16 +115,16 @@ repos:
     hooks:
       - id: pyupgrade
         args: [--py38-plus, --keep-runtime-typing]
-#
-#  - repo: https://github.com/charliermarsh/ruff-pre-commit
-#    # Ruff version.
-#    rev: v0.8.3
-#    hooks:
-#      # Run the linter.
-#      - id: ruff
-#        args: [--fix, --exit-non-zero-on-fix]
-#      # Run the formatter.
-#      - id: ruff-format
+
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.8.3
+    hooks:
+      # Run the linter.
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+      # Run the formatter.
+      - id: ruff-format
 
   -   repo: https://github.com/dosisod/refurb
       rev: v2.0.0
