style: Apply ruff check --preview

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -201,8 +201,8 @@ ignore = [
     "ARG001",  #  ARG001 Unused function argument: `debug`, `kwargs`, and `method` in class Client
     # TODO: Fix A001 Variable `TimeoutError` is shadowing a Python builtin
     "A001" ,
-    # TODO: Enable A, ANN, D, C901, TRY201, TRY003, EM101, PTH118 later
-    "A", "ANN", "D", "C901", "TRY201", "TRY003", "EM101", "PTH118", "PLR0912", "ERA001",
+    # TODO: Enable A, ANN, D, C901, TRY201, TRY003, EM101, PTH118, PLR0917 later
+    "A", "ANN", "D", "C901", "TRY201", "TRY003", "EM101", "PTH118", "PLR0912", "ERA001", "PLR0917",
     "ANN401",  # ANN401 Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
     "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None`
     # pycodestyle (E, W)
