build: Use pre-commit from the conda-forge channel

--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -37,7 +37,8 @@ dependencies:
   - conda
   - conda-build
   - jsonschema
-  - pre-commit
+  # TODO: replace it when it will be available on defaults
+  - conda-forge::pre-commit
   - python-dotenv >=0.19.2
   - types-jsonschema
   - pip:
