--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -130,7 +130,7 @@ repos:
       rev: v2.0.0
       hooks:
       -   id: refurb
-          language_version: "3.10"
+          language_version: python3.12
 #
 #  - repo: https://github.com/pre-commit/mirrors-mypy
 #    rev: v1.13.0
