ci: Disable autopep8

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -71,11 +71,11 @@ repos:
     hooks:
       - id: check-github-workflows
 
-  - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v2.0.4
-    hooks:
-      - id: autopep8
-        exclude: ^docs/
+#  - repo: https://github.com/pre-commit/mirrors-autopep8
+#    rev: v2.0.4
+#    hooks:
+#      - id: autopep8
+#        exclude: ^docs/
 
   - repo: https://github.com/akaihola/darker
     rev: v2.1.1
