--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -48,8 +48,8 @@ dependencies:
       - pyment >=0.3.3
       - pytype
       - pyupgrade
-      # refurb >=2 don't support py39
-      - refurb <2
+      # refurb don't support py39
+      #- refurb
       - scalene >=1.3.16
       - snakeviz
       - typos
