style: Turn off formatting for html urls with double quotes, add TODOs to fix issues later

--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -48,7 +48,7 @@ dependencies:
       - pyment >=0.3.3
       - pytype
       - pyupgrade
-      # refurb don't support py39
+      # refurb doesn't support py39
       #- refurb
       - scalene >=1.3.16
       - snakeviz
