--- a/.github/workflows/commit_checks.yaml
+++ b/.github/workflows/commit_checks.yaml
@@ -13,8 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-      # TODO: Enable pre-commit after setting up configurations
-      #- uses: pre-commit/action@v3.0.1
+      - uses: pre-commit/action@v3.0.1
 
   test:
     name: test py${{ matrix.python-version }} on ${{ matrix.os }}
@@ -26,6 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        # TODO": Enable py313 support when all packages will be available on the main channel
         python-version: ["3.9", "3.10", "3.11", "3.12"]
     #environment: mailgun
     env:
@@ -38,7 +38,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
           channels: defaults
           show-channel-urls: true
-          environment-file: environment.yaml
+          environment-file: environment-dev.yaml
 
       - name: Install the package
         run: |
