--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -48,7 +48,8 @@ dependencies:
       - pyment >=0.3.3
       - pytype
       - pyupgrade
-      - refurb
+      # refurb doesn't support py39
+      #- refurb
       - scalene >=1.3.16
       - snakeviz
       - typos
