--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -111,7 +111,7 @@ repos:
           - --exit-zero
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.19.0
+    rev: v3.19.1
     hooks:
       - id: pyupgrade
         args: [--py38-plus, --keep-runtime-typing]
@@ -131,21 +131,21 @@ repos:
       hooks:
       -   id: refurb
           language_version: python3.12
-#
-#  - repo: https://github.com/pre-commit/mirrors-mypy
-#    rev: v1.13.0
-#    hooks:
-#    -   id: mypy
-#        args:
-#          [
-#            --config-file=./pyproject.toml,
-#          ]
-#        exclude: ^samples/
-#
-#  - repo: https://github.com/RobertCraigie/pyright-python
-#    rev: v1.1.390
-#    hooks:
-#    - id: pyright
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.13.0
+    hooks:
+    -   id: mypy
+        args:
+          [
+            --config-file=./pyproject.toml,
+          ]
+        exclude: ^mailgun/examples/
+
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.391
+    hooks:
+    - id: pyright
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.8.0
@@ -157,7 +157,7 @@ repos:
         additional_dependencies: [".[toml]"]
 
   - repo: https://github.com/crate-ci/typos
-    rev: v1.28.3
+    rev: v1.28.4
     hooks:
       - id: typos
 
