--- a/.github/workflows/commit_checks.yaml
+++ b/.github/workflows/commit_checks.yaml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        # TODO": Enable py313 support when all packages will be available on the main channel
+        # TODO": Enable py313 support when all packages will be available on the conda 'main' channel
         python-version: ["3.9", "3.10", "3.11", "3.12"]
     #environment: mailgun
     env:
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install the package
         run: |
-          pip install -e .
+          pip install .
           conda info
       - name: Test package imports
         run: python -c "import mailgun"
