--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -118,11 +118,11 @@ repos:
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     # Ruff version.
-    rev: v0.8.3
+    rev: v0.8.4
     hooks:
       # Run the linter.
       - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
+        args: [--fix, --preview, --exit-non-zero-on-fix]
       # Run the formatter.
       - id: ruff-format
 
@@ -133,7 +133,7 @@ repos:
           language_version: python3.12
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.13.0
+    rev: v1.14.0
     hooks:
     -   id: mypy
         args:
@@ -162,7 +162,7 @@ repos:
       - id: typos
 
   - repo: https://github.com/executablebooks/mdformat
-    rev: 0.7.19
+    rev: 0.7.21
     hooks:
       - id: mdformat
         additional_dependencies:
