--- a/pyproject.toml
+++ b/pyproject.toml
@@ -208,7 +208,7 @@ ignore = [
     # pycodestyle (E, W)
     "CPY001",   # Missing copyright notice at top of file
     "DOC201",  # DOC201 `return` is not documented in docstring
-    # TODO: Enable when the upstream issue is fixed, see https://github.com/astral-sh/ruff/issues/12520
+    # TODO: Enable DOC501 when the upstream issue is fixed, see https://github.com/astral-sh/ruff/issues/12520
     "DOC501",  # DOC501 Raised exception `ApiError` missing from docstring
     "E501",
     "PLR0913",  # PLR0913 Too many arguments in function definition (6 > 5)
@@ -274,6 +274,7 @@ max-complexity = 10
 ignore-overlong-task-comments = true
 
 [tool.ruff.lint.pydocstyle]
+# TODO: Enable the 'sphinx' style when it will be available, see https://github.com/astral-sh/ruff/pull/13286
 convention = "google"
 
 [tool.pydocstyle]
